Similar models search now works, but is slow

--- a/build.xml
+++ b/build.xml
@@ -2,8 +2,8 @@
 
 <project name="CellCircuits" default="deploy">
 
- 	<property name="deploy.version" value="v1.0"/>
- 	<property name="dev.version" value="v1.1"/>
+ 	<property name="deploy.version" value="v1.1"/>
+ 	<property name="dev.version" value="v1.0"/>
  	<property name="deploy.docroot" value="/var/www/html"/>
  	<property name="deploy.html" value="${deploy.docroot}/search/${deploy.version}"/>
  	<property name="deploy.cgi" value="/var/www/cgi-bin/search/${deploy.version}"/>
@@ -81,7 +81,7 @@
         </target>
 
        <target name="deploy-link" description="Create symlinks so that the deployment dirs are linked to the development dirs."
-               depends="deploy-prepare">
+               depends="">
 
           <symlink link="${deploy.cgi}" resource="${basedir}/cgi-bin" overwrite="yes"/>
           <symlink link="${deploy.html}" resource="${basedir}/html" overwrite="yes"/>
